[package]
name = "signet-rs"
version = "0.2.5"
authors = ["Sig Network", "Proximity Labs Limited"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/sig-net/signet.rs"
description = "Transaction builder for all chains in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
default = ["std", "all"]
std = [
    "rlp/std",
    "hex/std",
    "serde/std",
    "serde_json/std",
    "sha2?/std"
]
all = ["bitcoin", "evm"]
bitcoin = ["sha2"]
evm = []

[dependencies]
rlp = { version = "0.6.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
borsh = { version = "1.0.0", default-features = false, features = ["derive"] }
serde-big-array = { version = "0.5.1", default-features = false }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
schemars = { version = "0.8", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false, optional = true }


[dev-dependencies]
# ethereum
alloy = { version = "0.3.3", features = ["full", "node-bindings", "rlp"] }
alloy-rlp = { version = "0.3.8", features = ["derive"] }
alloy-primitives = { version = "0.8.3" }

# bitcoin
bitcoin = { version = "0.32.0", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }

# async
tokio = { version = "1.38", features = ["full"] }

# misc
eyre = "0.6"

